# smart-stroller

./: .gitignore  README.md  driver.code-workspace  drivers.code-workspace  run.sh
app/: CMakeLists.txt  run.sh
app/inc/: type.h
app/include/: stroller.h
app/include/actuator/: chassis.h  motor.h  servo.h  steering_gear.h
app/include/comm/: comm.h  comm_op.h  comm_platfrom.h  tcpserver.h
app/include/hal/: hal_gpio.h  hal_iic.h
app/include/sensor/: sensor.h  sensor_op.h  sensor_platfrom.h
app/lib/: tools.h
app/lib/log/: README  log.c  log.h
app/src/: main.c  main.cpp  stroller.c
app/src/actuator/: chassis.c  motor.c  servo.c  steering_gear.c
app/src/comm/: comm_op.c  comm_platfrom.c  comm_uart_op.c  tcpserver.c
app/src/hal/: hal_gpio.c  hal_iic.c
app/src/sensor/: sensor_aht10_op.c  sensor_dht11_op.c  sensor_fake_op.c  sensor_hlk2411s_op.c  sensor_mq135_op.c  sensor_op.c  sensor_platfrom.c  sensor_sw180110p_op.c  sensor_sw18015_op.c  sensor_vl6180_op.c  sensor_xxx_op.c
app/unity_test/: CMakeLists.txt
app/unity_test/actuator/: CMakeLists.txt  chassis.c  servo.c
app/unity_test/aht10/: CMakeLists.txt  main.c
app/unity_test/comm/: CMakeLists.txt  tcp.c
app/unity_test/hal/: CMakeLists.txt  gpio.c
app/unity_test/motor/: CMakeLists.txt  main.c
app/unity_test/sensor/: CMakeLists.txt  aht10.c  hlk2411s.c  sw18015.c  vl6180.c
app/unity_test/servo/: CMakeLists.txt
app/unity_test/vl6180/: CMakeLists.txt  main.c
docs/: demands.md  orange-pi-zero3-docs-link.md
drivers/: Makefile  overlay.dts
drivers/inc/: motor.h
drivers/src/: hello.c  motor-spwm.c  motor.c  servo.c  sw18015.c
drives/: Makefile
drives/inc/: motor.h
drives/src/: Makefile  motor.c  overlay.dts
script/: board_setup.sh  load_ko.sh
